--- a/app/views/tasks/_table.html.erb
+++ b/app/views/tasks/_table.html.erb
@@ -1,8 +1,8 @@
 <div class="welcome_box_black">
   <p>
     Download:
-    <%= link_to "CSV", activity_tasks_path(format: "csv") %> |
-    <%= link_to "PDF", activity_tasks_path(format: "pdf") %>
+    <%= link_to "CSV", activity_tasks_path(format: "csv"), :style=>'color:#FFFFFF;' %> |
+    <%= link_to "PDF", activity_tasks_path(format: "pdf"), :style=>'color:#FFFFFF;'%>
   </p>
   <table>
     <tr>
@@ -23,14 +23,14 @@
         <td><%= task.final_date %></td>
         <td><%= task.activitie_id %></td>
         <td><%= task.id %></td>
-        <td><%= link_to 'Show', activity_task_path(@activitie, task) %></td>
-        <td><%= link_to 'Edit', edit_activity_task_path(@activitie, task)%></td>
-        <td><%= link_to 'Destroy', activity_task_path(@activitie, task),
+        <td><%= link_to 'Show', activity_task_path(@activitie, task), :style=>'color:#FFFFFF;' %></td>
+        <td><%= link_to 'Edit', edit_activity_task_path(@activitie, task), :style=>'color:#FFFFFF;'%></td>
+        <td><%= link_to 'Destroy', activity_task_path(@activitie, task), :style=>'color:#FFFFFF;',
                 method: :delete,
                 data: { confirm: 'Are you sure?' } %>
         </td>
       </tr>
     <% end %>
   </table>
-  <%= link_to 'Back', activities_path %>
+  <%= link_to 'Back', activities_path, :style=>'color:#FFFFFF;' %>
 </div>
