--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -37,5 +37,5 @@
       <%= form.submit %>
     </p>
   <% end %>
-  <%= link_to 'Back', activity_tasks_path %>
+  <%= link_to 'Back', activity_tasks_path, :style=>'color:#FFFFFF;' %>
 </div>
