--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -22,7 +22,7 @@
 		  <%= @task.final_date %>
 		</p>
 
-		<%= link_to 'Back', activity_tasks_path :style=>'color:#FFFFFF;' %>
+		<%= link_to 'Back', activity_tasks_path, :style=>'color:#FFFFFF;' %>
 	</div>
 	
 </div>
