--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -56,9 +56,10 @@
               <td><%= task.final_date %></td>
               <td><%= task.activitie_id %></td>
               <td><%= task.id %></td>
-              <td><%= link_to 'Show', activity_task_path(@activitie, task) %></td>
-              <td><%= link_to 'Edit', edit_activity_task_path(@activitie, task) %></td>
-              <td><%= link_to 'Destroy', activity_task_path(@activitie, task),
+              <td><%= link_to 'Show', activity_task_path(@activitie, task), :style=>'color:#FFFFFF;' %></td>
+              <td><%= link_to 'Edit', edit_activity_task_path(@activitie, task), :style=>'color:#FFFFFF;' %></td>
+              <td><%= link_to 'Destroy', activity_task_path(@activitie, task), :style=>'    
+                      color:#FFFFFF;',
                       method: :delete,
                       data: { confirm: 'Are you sure?' } %>
               </td>
