--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -94,8 +94,8 @@
           <%= form.submit %>
         </p>
       <% end %>
-      <p><%= link_to 'Edit', edit_activity_path(@activitie) %>|
-      <%= link_to 'Back', activities_path %></p>
+      <p><%= link_to 'Edit', edit_activity_path(@activitie), :style=>'color:#FFFFFF;' %>|
+      <%= link_to 'Back', activities_path, :style=>'color:#FFFFFF;' %></p>
     </div>
   </section>
   <br><br><br>
