--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -34,6 +34,7 @@
             </tr>
           <% end %>
         </table>
+        <p>Want to send this activities to your email? press above</p>
         <br>
         <br>
         <br>
