--- a/app/views/user_mailer/update_info.html.erb
+++ b/app/views/user_mailer/update_info.html.erb
@@ -5,10 +5,10 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @user.name %></h1>
+    <h1>Changes made to account: <%= @user.email %></h1>
     <p>
-      You have successfully signed up to example.com,
-      your email is: <%= @user.email %>.<br>
+      We thought you would like to know there where changes to the account: <%= @user.email %>.<br>
+      If it was you, dont worry then.
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
