--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -35,6 +35,7 @@
           <% end %>
         </table>
         <p>Want to send this activities to your email? press above</p>
+        <%= button_to 'Send Email'  %>
         <br>
         <br>
         <br>
