--- a/app/views/user_mailer/activity_report.text.erb
+++ b/app/views/user_mailer/activity_report.text.erb
@@ -1,1 +1,1 @@
- Hi <%= @user.name %>, TODO app wants to remind about your following activities.
+ Hi , TODO app wants to remind about your following activities.
