Add border-radius for creator picture

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -34,7 +34,7 @@
 		<p>Eduardo Javier Candanedo Contreras borned in Colima, Col; currently living in Cuauhtemoc, Colima. Studied Computer Systems Engeneer at Tecnologico de Colima, then transfer to Tecnologico de Zapopan and started working for Teleperformance as a Customer Service agent for Comcast, then when I was in 7th Semester</p>
 		<br>
 		<br>
-		<div align="center"><%= image_tag "about/creator.jpg", width: '300px' %></div>
+		<div align="center"><%= image_tag "about/creator.jpg", width: '300px', :style=>'border-radius: 50%;'%></div>
 	</div>
 	<br><br><br>
 	<footer>
