Change user registrations form to include Avatar

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -37,7 +37,7 @@
   </div>
 
   <div class="field">
-    <%= image_tag @current_user.avatar, :style=>'width:150px;' %>
+    <%= image_tag @current_user.avatar, :style=>'width:150px; border-radius: 50%;' %>
   </div>  
 
   <div class="field">
