Add Title Tasks

--- a/app/views/tasks/_table.html.erb
+++ b/app/views/tasks/_table.html.erb
@@ -1,4 +1,6 @@
 <div class="welcome_box_black">
+  <h1 align="center">Tasks</h1>
+  <br>
   <p>
     Download:
     <%= link_to "CSV", activity_tasks_path(format: "csv"), :style=>'color:#FFFFFF;' %> |
