--- a/app/views/tasks/_header.html.erb
+++ b/app/views/tasks/_header.html.erb
@@ -1,15 +1,12 @@
 <div>
-	<div>
 		<%= image_tag "welcome/magma.png", width: '300px' %>
-	</div>
-
-
+</div>
+<div>
 	<ul class="navvar-home" >
-	  <li class="linavvar-home"><a><%= link_to 'Home', controller: 'welcome' %></a></li>
-	  <li class="linavvar-home"><a><%= link_to 'TODO´s App', controller: 'activities' %></a></li>
-	  <li class="linavvar-home"><a><%= link_to 'Assignment', controller: 'howitworks' %></a></li>
-	  <li class="linavvar-home"><a><%= link_to 'Build it', controller: 'buildit' %></li>
-	  <li class="linavvar-home"><a><%= link_to 'About', controller: 'about' %></a></li>
-
+	  <li class="linavvar-home"><%= link_to 'Inicio', controller: 'welcome' %></li>
+	  <li class="linavvar-home"><%= link_to 'TODO´s App', controller: 'activities' %></li>
+	  <li class="linavvar-home"><%= link_to 'Assignment', controller: 'howitworks' %></li>
+	  <li class="linavvar-home"><%= link_to 'Build it', controller: 'buildit' %></li>
+	  <li class="linavvar-home"><%= link_to 'About', controller: 'about' %></li>
 	</ul>
 </div>
