--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,9 +6,9 @@
 </head>
 <body>
     <header>
-      <%= render 'header'%>
+      <%= render 'semantic/header'%>
     </header>
-    <p class="session"><%= render 'session' %></p>
+    
     <br>
     <br>
   <section>
@@ -16,7 +16,7 @@
   </section>
   <br><br><br>
   <footer>
-     <%= render 'footer'%>
+     <%= render 'semantic/footer'%>
   </footer>
 </body>
 </html>
