--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -5,9 +5,9 @@
 </head>
 <body>
 	<header>
-		<%= render 'header' %>
+		<%= render 'semantic/header' %>
 	</header>
-	<p class="session"><%= render 'session' %></p>
+	
 
 	<br><br><br>
 	<section>
@@ -19,7 +19,7 @@
 	</section>
 	<br><br><br>
 	<footer>
-		<%= render 'footer'%>
+		<%= render 'semantic/footer'%>
 	</footer>
 </body>
 </html>
