--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -5,10 +5,8 @@
 </head>
 <body>
   <header>
-      <%= render 'header'%>
+      <%= render 'semantic/header'%>
   </header>
-
-  <p class="session"><%= render 'session' %></p>
   <br><br><br>
   <section>
     <div class ="welcome_box_black">
@@ -100,7 +98,7 @@
   </section>
   <br><br><br>
   <footer>
-      <%= render 'footer' %>
+      <%= render 'semantic/footer' %>
   </footer>
 </body>
 </html>
