--- a/app/views/semantic/_header.html.erb
+++ b/app/views/semantic/_header.html.erb
@@ -1,8 +1,9 @@
+<p class="session"><%= render 'semantic/session' %></p>
 <div>
-		<%= image_tag "welcome/magma.png", width: '300px' %>
+	<%= image_tag "welcome/magma.png", width: '300px' %>
 </div>
 <div>
-	<ul class="navvar-home" >
+	<ul class="navvar" >
 	  <li class="linavvar-home"><%= link_to 'Inicio', controller: 'welcome' %></li>
 	  <li class="linavvar-home"><%= link_to 'TODO´s App', controller: 'activities' %></li>
 	  <li class="linavvar-home"><%= link_to 'Assignment', controller: 'howitworks' %></li>
