--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -5,11 +5,8 @@
 </head>
 <body>
 	<header>
-		<%= render 'activities/header' %>
+		<%= render 'semantic/header' %>
 	</header>
-
-	<p class="session"><%= render 'session' %></p>
-
 	<br>
 	<br>
 	<br>
@@ -38,7 +35,7 @@
 	</div>
 	<br><br><br>
 	<footer>
-		<%= render 'activities/footer' %>
+		<%= render 'semantic/footer' %>
 	</footer>
 </body>
 </html>
