--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -5,12 +5,9 @@
 </head>
 <body>
 	<header>
-		<%= render 'activities/header' %>
+		<%= render 'semantic/header' %>
 	</header>
-	
-	<p class="session"><%= render 'session' %></p>
 	<br><br><br>
-
 	<section>
 		<%= render 'formedit' %>
 	</section>
@@ -18,7 +15,7 @@
 	<br><br><br>
 	
 	<footer>
-		<%= render 'activities/footer' %>
+		<%= render 'semantic/footer' %>
 	</footer>
 </body>
 </html>
