--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -5,10 +5,9 @@
 </head>
 <body>
 	<header>
-		<%= render 'header' %>
+		<%= render 'semantic/header' %>
 	</header>
 	
-	<p class="session"><%= render 'session' %></p>
 	<br><br><br>
 
 	<section>
@@ -18,7 +17,7 @@
 	<br><br><br>
 
 	<footer class="welcome_box_black">
-		<%= render 'footer' %>
+		<%= render 'semantic/footer' %>
 	</footer>
 
 </body>
