--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,10 +5,9 @@
   </head>
   <body>
     <header>
-      <%= render 'header' %>
+      <%= render 'semantic/header' %>
     </header>
 
-    <p class="session"><%= render 'session' %></p>
     <br><br><br>
 
     <section>
@@ -18,7 +17,7 @@
     <br><br><br>
 
     <footer>
-      <%= render 'footer' %>
+      <%= render 'semantic/footer' %>
     </footer>
   </body>
 </html>
