--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,10 +6,9 @@
 </head>
 <body>
 	<header>
-		<%= render 'header'%>
+		<%= render 'semantic/header'%>
 	</header>
-
-	<p class="session"><%= render 'session' %></p>
+	
 	<br><br><br>
 
 	<section>
@@ -19,7 +18,7 @@
 	<br><br><br>
 
 	<footer>
-		<%= render 'footer'%>
+		<%= render 'semantic/footer'%>
 	</footer>
 </body>
 </html>
