Add link to MagmaLab´s logo

--- a/app/views/semantic/_header.html.erb
+++ b/app/views/semantic/_header.html.erb
@@ -1,7 +1,7 @@
 <p class="session"><%= render 'semantic/session' %></p>
-<div>
-	<%= image_tag "welcome/magma.png", width: '300px' %>
-</div>
+
+<a href="https://www.magmalabs.io"><%= image_tag "welcome/magma.png", width: '300px' %></a>
+
 <div>
 	<ul class="navvar" >
 	  <li class="linavvar-home"><%= link_to 'Inicio', controller: 'welcome' %></li>
