--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -1,5 +1,5 @@
 <div class="welcome_box_black">
-        <h1>Listing activities</h1>
+        <h1>Lists of TODOs</h1>
         <br>
         <br>
         <p class = "pdown">Download:
