--- a/app/views/activities/_formedit.html.erb
+++ b/app/views/activities/_formedit.html.erb
@@ -1,5 +1,5 @@
 <div class="welcome_box_black">
-  <h1 align="center">Edit Activity</h1>
+  <h1 align="center">Edit TODO List</h1>
   <%= form_with model: @activitie, local: true do |form| %>
     <% if @activitie.errors.any? %>
       <div id="error_explanation">
