--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -12,7 +12,7 @@
 	<br><br><br>
 	<section>
 		<div class="welcome_box_black">
-			<h1>Activities</h1>
+			<h1>Lists of TODOs</h1>
 			<%= render 'form' %>
 			<%= link_to 'Back', activities_path %>
 		</div>	
