--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -10,7 +10,7 @@
   <br><br><br>
   <section>
     <div class ="welcome_box_black">
-      <h1>Activity</h1>
+      <h1>List of TODOs</h1>
       <p>
         <strong>Name:</strong>
         <%= @activitie.name %>
