--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,6 +36,14 @@
 		<br>
 	</div>
 	<br><br><br>
+	<div class="welcome_box_black" align="center">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3766.393769145606!2d-103.71299278494502!3d19.265234986979603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84255ac0cb7baabd%3A0x49107047fc2c8c23!2sMagmaLabs!5e0!3m2!1ses!2smx!4v1539652038584" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	</div>
+	<br><br><br>
+	<div class="welcome_box_black">
+		<a class="twitter-grid" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">National Park Tweets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</div>
+	<br><br><br>
 	<footer>
 		<%= render 'semantic/footer'%>
 	</footer>
