--- a/app/views/semantic/_session.html.erb
+++ b/app/views/semantic/_session.html.erb
@@ -6,5 +6,6 @@
                                               width: 40px"%>
 <% else %>
   <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %> |
+  <%= link_to "Sign in with Github", user_github_omniauth_authorize_path %>
 <% end %>
