--- a/app/views/buildit/index.html.erb
+++ b/app/views/buildit/index.html.erb
@@ -12,25 +12,11 @@
 	<br>
 
 	<div class="welcome_box_black">
-		<h1 align="center">Build it your self</h1>
-		<h4>Yo should develop a TODO App that includes the following features</h4>
+		<h1 align="center">Use it</h1>
 		<div>
 			<ul>
-				<li>First of all, we need to create a rails application for that of course we need to have Rails install in our computer you will need to have at least v5.0 and ruby v2.2 then you can simply create a new Rails Project by running the following command: 'rails new project_name' then proceed to create the controller for the main view which in our case will be the 'rails g controller welcome index' if you notice we added an index view for this controller it´s only optional if you use 'rails g controller welcome' and then create a view manually as you prefer.
-				After this you can create your first model; for this you can use the following command 'rails g model List' and the create the controller as before</li>
-				<dd>- For more complete info you can visit the Ruby on Rails official Documentation. <a href="https://guides.rubyonrails.org/getting_started.html">Getting Started</a></dd>
-				<li>Users can create, read, update and delete (CRUD) lists of TODOs</li>
-				<dd>- Done</dd>
-				<li>Users can CRUD taks on a list</li>
-				<dd>- Done</dd>
-				<li>Users can export their lists with their tasks to CSV and PDF files.</li>
-				<dd>- Done (Only need to style PDF)</dd>
-				<li>Users should receive weekly email including pending tasks (using emails and BackgroundJobs with Sidekiq and Redis)</li>
-				<dd>- In Process</dd>
-				<li>Users can update your profile: name, email, description and photo (photo must be uploaded, you could use paperclip for this task)</li>
-				<dd>- In Process</dd>
-				<li>The app must include unit tests with Rspec and integration with Capybara</li>
-				<dd>- In Process</dd>
+				<li>You can take a look to the repository so that you can use the project your self <a href="https://github.com/candanedo/TODO-app">Github</a></li>
+				
 			</ul>
 		</div>
 	</div>
