--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -28,7 +28,7 @@
 	<div class="welcome_box_black">
 		<h1 align="center">About the creator</h1>
 		<br>
-		<p>Eduardo Javier Candanedo Contreras borned in Colima, Col; currently living in Cuauhtemoc, Colima. Studied Computer Systems Engeneer at Tecnologico de Colima, then transfer to Tecnologico de Zapopan and started working for Teleperformance as a Customer Service agent for Comcast, then when I was in 7th Semester</p>
+		<p>Eduardo Javier Candanedo Contreras borned in Colima, Col; currently living in Cuauhtemoc, Colima. Studied Computer Systems Engeneer at Tecnologico de Colima and the in ICEP.</p>
 		<br>
 		<br>
 		<div align="center"><%= image_tag "about/creator.jpg", width: '300px', :style=>'border-radius: 50%;'%></div>
