Assignment index with all tasks completed

--- a/app/views/howitworks/index.html.erb
+++ b/app/views/howitworks/index.html.erb
@@ -27,8 +27,8 @@
 				<dd>- Done.</dd>
 				<li>Users can update your profile: name, email, description and photo (photo must be uploaded, you could use paperclip for this task)</li>
 				<dd>- Done</dd>
-				<li>The app must include unit tests with Rspec and integration with Capybara</li>
-				<dd>- Pending</dd>
+				<li>The app must include unit tests with Rspec.</li>
+				<dd>- Done</dd>
 			</ul>
 		</div>
 	</div>
