--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
 	<br>
 	<br>
 	<div class="welcome_box_black" align="center">
-		<div class="img_task">
+		<div class="img_task img_act">
 			<%= image_tag "welcome/tasks.jpg", width: '632px' %>
 			<%= image_tag "welcome/tasks2.jpg", width: '570px' %>
 		</div>
@@ -34,11 +34,6 @@
 		All you need to do to get started is to create an account or if you already have one, you can simply login and manage your lists and tasks.</p>
 		<br>
 		<br>
-	</div>
-	<br><br><br>
-	<div class="welcome_box_black" align="center">
-		<h1>Magma´s Home</h1>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3766.393769145606!2d-103.71299278494502!3d19.265234986979603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84255ac0cb7baabd%3A0x49107047fc2c8c23!2sMagmaLabs!5e0!3m2!1ses!2smx!4v1539652038584" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 	<br><br><br>
 	<div class="welcome_box_black">
